[workspace]
resolver = "2"

members = [
    "simulator",
    "ai",
    "api",
    "telemetry_proto",
    "frontend/app",
    "frontend/renderer",
    "frontend/simulation_worker",
    "frontend/analyzer_worker",
    "services/compiler",
    "services/telemetry",
    "services/leaderboard",
    "tools",
]

[patch.crates-io]
yew = { git = "https://github.com/yewstack/yew", rev = "73d9c04782b5bb6103ac82431396970b5893fc31" }
yew-agent = { git = "https://github.com/yewstack/yew", rev = "73d9c04782b5bb6103ac82431396970b5893fc31" }
yew-router = { git = "https://github.com/yewstack/yew", rev = "73d9c04782b5bb6103ac82431396970b5893fc31" }
wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
wasmer-compiler = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
wasmer-compiler-cranelift = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
rand_seeder = { git = "https://github.com/rlane/seeder", rev = "c39e58447f7c236fb98579a5d46e5668b92a3245" }
monaco = { git = "https://github.com/rlane/rust-monaco", rev = "09ff7c17ad31b1c0f94f8441c6f092050edbec95" }

[profile.dev.package.'*']
opt-level = 3

[profile.dev.package.oort_renderer]
opt-level = 1

[profile.dev.package.oort_simulator]
opt-level = 1

[profile.dev.package.oort_simulation_worker]
opt-level = 1

[profile.dev.package.oort-app]
opt-level = 1

[profile.dev]
opt-level = 0

[profile.release]
debug = true
lto = true

[profile.bench]
debug = true
lto = false
