[package]
name = "oort_api"
version = "0.6.0"
edition = "2021"
authors = ["Rich Lane"]
description = "APIs for Oort, a space fleet programming game."
license = "GPL-3.0-or-later"
repository = "http://github.com/rlane/oort3"

[dependencies]
oort_shared = { version = "0.6.0", path = "../shared" }
oorandom = "11.1.3"
