[workspace]
resolver = "2"

members = [
    "app",
    "renderer",
    "simulation_worker",
    "analyzer_worker",
    "version_control",
]

[patch.crates-io]
monaco = { git = "https://github.com/rlane/rust-monaco", rev = "fb9b66155ef17850ddc50e686e3912bdb037d313" }

[profile.dev.package.'*']
opt-level = 3

[profile.dev.package.oort_renderer]
opt-level = 1

[profile.dev.package.oort_simulator]
opt-level = 1

[profile.dev.package.oort_simulation_worker]
opt-level = 1

[profile.dev.package.oort-app]
opt-level = 1

[profile.dev]
opt-level = 0

[profile.release]
debug = true
lto = "thin"

[profile.bench]
debug = true
lto = "thin"
