[package]
name = "oort_renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3.51"
log = "0.4"
memoffset = "0.6"
nalgebra = { version = "0.28", features = ["serde-serialize"] }
oort_simulator = { path = "../simulator" }
rand = "*"
rand_chacha = "0.3.1"
rand_seeder = "0.2.2"
regex = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'KeyboardEvent',
  'console',
  'Storage',
  'WheelEvent',
]
