[package]
name = "oort_renderer"
version = "0.2.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.6", features = ["js"] }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.57"
log = "0.4.17"
memoffset = "0.6.5"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
oort_simulator = { path = "../simulator", features = ["js"], default-features = false }
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
regex = "1.5.6"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'KeyboardEvent',
  'console',
  'Storage',
  'WheelEvent',
]
