[workspace]
resolver = "2"

members = [
    "simulator",
    "ai",
    "api",
    "proto",
]

[patch.crates-io]
wasmer = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
wasmer-compiler = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
wasmer-compiler-cranelift = { git = "https://github.com/wasmerio/wasmer", rev = "a3daf3d1130be9b04d95911f28efd56ad23ad3eb" }
rand_seeder = { git = "https://github.com/rlane/seeder", rev = "c39e58447f7c236fb98579a5d46e5668b92a3245" }

[profile.dev.package.'*']
opt-level = 3

[profile.dev.package.oort_simulator]
opt-level = 1

[profile.dev]
opt-level = 0

[profile.release]
debug = true
lto = true

[profile.bench]
debug = true
lto = false
