[package]
name = "oort_simulator"
version = "0.1.0"
edition = "2018"
authors = ["Rich Lane"]
description = "A space fleet programming game."
license = "GPL-3.0-or-later"
repository = "http://github.com/rlane/oort3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam = "0.8"
getrandom = { version = "0.2", features = ["js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3.51"
lazy_static = "*"
log = "0.4"
nalgebra = { version = "0.28", features = ["serde-serialize"] }
oorandom = "11.1.3"
rand = "*"
rand_chacha = "0.3.1"
rand_distr = "0.4.1"
rand_seeder = "0.2.2"
rapier2d-f64 = { version = "0.10", features = ["wasm-bindgen"] }
regex = "1.5"
rhai = { version = "~1.7", features = ["internals"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
smartstring = "0.2"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dev-dependencies]
bincode = "1.3"
rayon = "1.5"
criterion = { version = "0.3", features = ["html_reports"] }
test-log = "0.2"
env_logger = "0.9"

[[bench]]
name = "bullets"
harness = false

[[bench]]
name = "tutorials"
harness = false

[[bench]]
name = "serialization"
harness = false
