[package]
name = "oort_simulator"
version = "0.1.0"
edition = "2021"
authors = ["Rich Lane"]
description = "A space fleet programming game."
license = "GPL-3.0-or-later"
repository = "http://github.com/rlane/oort3"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crossbeam = "0.8.1"
getrandom = { version = "0.2.6", features = ["js"] }
lazy_static = "1.4.0"
log = "0.4.17"
nalgebra = { version = "0.31.0", features = ["serde-serialize"] }
oorandom = "11.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rand_seeder = "0.2.3"
rapier2d-f64 = { version = "0.13.0", features = ["wasm-bindgen"] }
regex = "1.5.6"
rhai = { version = "1.7.0", features = ["internals"] }
serde = { version = "1.0.137", features = ["derive"] }
smartstring = "1.0.1"
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.57"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"

[dev-dependencies]
bincode = "1.3.3"
rayon = "1.5.3"
criterion = { version = "0.3.5", features = ["html_reports"] }
test-log = "0.2.10"
env_logger = "0.9.0"
serde_json = "1.0.81"

[[bench]]
name = "bullets"
harness = false

[[bench]]
name = "missiles"
harness = false

[[bench]]
name = "tutorials"
harness = false

[[bench]]
name = "serialization"
harness = false
