[package]
name = "oort_tools"
version = "0.79.2"
publish = false
edition = "2021"
resolver = "2"

[dependencies]
oort_proto = { path = "../shared/proto" }
oort_simulator = { path = "../shared/simulator", features = ["precompile"] }
oort_compiler = { path = "../shared/compiler" }
oort_api = { path = "../shared/api" }
firestore = "0.37.5"
gcloud-sdk = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.37", features = ["full"] }
log = "0.4.21"
env_logger = "0.10.1"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rayon = "1.10.0"
serde_json = "1.0"
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
skillratings = "0.26.0"
itertools = "0.12.1"
comfy-table = "7.1.1"
petname = "1.1.3"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
anyhow = "1.0.82"
shell-words = "1.1.0"
toml = "0.8.12"
indicatif = { version = "0.17.8", features = ["tokio"] }
once_cell = "1.19.0"
regex = "1.10.4"
rand = "0.8.5"
metaheuristics-nature = { version = "10.0.1", features = ["clap", "rayon"] }
tempdir = "0.3.7"
glob = "0.3.1"
tar = "0.4.40"
libflate = "2.0.0"
tokio-retry = "0.3.0"
goose = "0.17.2"
nalgebra = "0.32.5"
futures = "0.3.30"
indicatif-log-bridge = "0.2.2"
