[package]
name = "oort_tools"
version = "0.79.3"
publish = false
edition = "2021"
resolver = "2"

[dependencies]
oort_proto = { path = "../shared/proto" }
oort_simulator = { path = "../shared/simulator", features = ["precompile"] }
oort_compiler = { path = "../shared/compiler" }
oort_api = { path = "../shared/api" }
firestore = "0.37.5"
gcloud-sdk = "0.23.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
log = "0.4.21"
env_logger = "0.10.2"
reqwest = { version = "0.11.27", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rayon = "1.10.0"
serde_json = "1.0"
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["derive"] }
skillratings = "0.27.0"
itertools = "0.13.0"
comfy-table = "7.1.1"
petname = "2.0.2"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
anyhow = "1.0.86"
shell-words = "1.1.0"
toml = "0.8.14"
indicatif = { version = "0.17.8", features = ["tokio"] }
once_cell = "1.19.0"
regex = "1.10.5"
rand = "0.8.5"
metaheuristics-nature = { version = "10.1.0", features = ["clap", "rayon"] }
tempdir = "0.3.7"
glob = "0.3.1"
tar = "0.4.40"
libflate = "2.1.0"
tokio-retry = "0.3.0"
goose = "0.17.2"
nalgebra = "0.32.5"
futures = "0.3.30"
indicatif-log-bridge = "0.2.2"
