[package]
name = "oort-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18"
rhai = { version = "1.0.0", features = ["internals"] }
oort = { path = ".." }

[profile.dev.package.'*']
opt-level = 3

[profile.dev]
opt-level = 0

[profile.release]
debug = true
lto = true

[profile.bench]
debug = true
lto = false
