[package]
name = "oort_analyzer_worker"
version = "0.84.1"
edition = "2021"
publish = false

[dependencies]
oort_proto = { path = "../../shared/proto" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4.20"
yew-agent = "0.2.0"
