[package]
name = "oort-app"
version = "0.36.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oort_renderer = { path = "../renderer" }
oort_simulation_worker = { path = "../simulation_worker" }
oort_simulator = { path = "../../shared/simulator", features = ["js"], default-features = false }
oort_proto = { path = "../../shared/proto" }
oort_envelope = { path = "../../shared/envelope" }
oort_version = { path = "../../shared/version" }
bincode = "1.3.3"
chrono = "0.4.19"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
flate2 = "1.0.24"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.57"
log = "0.4.17"
nalgebra = { version = "0.32.1", features = ["serde-serialize"] }
no-comment = "0.0.3"
petname = "1.1.2"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
regex = "1.5.6"
serde_json = "1.0.81"
serde = { version = "1.0.137", features = ["derive"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
yew = { version = "0.19.3", features = ["csr"] }
yew-agent = "0.1.0"
gloo-render = "0.1.1"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.30"
monaco = { version = "0.3.0", features = ["yew-components"] }
yew-router = "0.16"
sha2 = "0.10.2"
gloo-utils = "0.1.5"
gloo-timers = "0.2.4"
serde-wasm-bindgen = "0.4"
censor = "0.3.0"
anyhow = "1.0.68"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'KeyboardEvent',
  'console',
  'Storage',
  'WheelEvent',
  'MouseEvent',
  'Request',
  'EventTarget',
  'PointerEvent',
  'DomRect',
  'Navigator',
]
