[package]
name = "oort-app"
version = "0.83.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oort_renderer = { path = "../renderer" }
oort_simulation_worker = { path = "../simulation_worker" }
oort_simulator = { path = "../../shared/simulator", features = ["js"], default-features = false }
oort_proto = { path = "../../shared/proto" }
oort_envelope = { path = "../../shared/envelope" }
oort_version = { path = "../../shared/version" }
oort_version_control = { path = "../version_control" }
oort_multifile = { path = "../../shared/multifile" }
bincode = "1.3.3"
chrono = "0.4.31"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
flate2 = "1.0.28"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.66"
log = "0.4.20"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
no-comment = "0.0.3"
petname = "1.1.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_seeder = "0.2.3"
regex = "1.10.1"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
yew = { version = "=0.20.0", features = ["csr"] }
yew-agent = "0.2.0"
gloo-render = "0.2.0"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.39"
monaco = { version = "0.3.0", features = ["yew-components"] }
yew-router = "0.17"
sha2 = "0.10.8"
gloo-utils = { version = "0.2.0", features = ["serde"] }
gloo-timers = "0.3.0"
serde-wasm-bindgen = "0.6"
censor = "0.3.0"
anyhow = "1.0.77"
gtag-js-sys = "0.2.0"
urlencoding = "2.1.3"

[dependencies.web-sys]
version = "0.3.66"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'KeyboardEvent',
  'console',
  'Storage',
  'WheelEvent',
  'MouseEvent',
  'Request',
  'EventTarget',
  'PointerEvent',
  'DomRect',
  'Navigator',
  'FileSystemFileEntry',
  'FileSystemDirectoryEntry',
  'DataTransfer',
  'DataTransferItem',
  'DataTransferItemList',
  'FileSystemEntry',
]
