[package]
name = "oort_renderer"
version = "0.46.2"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oort_simulator = { path = "../../shared/simulator", features = ["js"], default-features = false }
oort_api = { path = "../../shared/api" }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.57"
log = "0.4.17"
memoffset = "0.8.0"
nalgebra = { version = "0.32.1", features = ["serde-serialize"] }
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
image = "0.24.5"
gloo-utils = "0.1.6"

[dependencies.web-sys]
version = "0.3.57"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'KeyboardEvent',
  'console',
  'Storage',
  'WheelEvent',
  'WebGlTexture',
]
