[package]
name = "oort_renderer"
version = "0.61.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oort_simulator = { path = "../../shared/simulator", features = ["js"], default-features = false }
oort_api = { path = "../../shared/api" }
instant = { version = "0.1.12", features = ["wasm-bindgen"] }
js-sys = "0.3.64"
log = "0.4.20"
memoffset = "0.9.0"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
wasm-bindgen = { version = "0.2.87", features = ["serde-serialize"] }
image = "0.24.7"
gloo-utils = "0.2.0"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'Node',
  'Window',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGl2RenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
  'KeyboardEvent',
  'console',
  'Storage',
  'WheelEvent',
  'WebGlTexture',
  'WebGlFramebuffer',
  'Screen',
  'WebGlVertexArrayObject',
  'WebGlRenderbuffer',
]
