[package]
name = "oort_simulation_worker"
version = "0.13.1"
edition = "2021"
publish = false

[dependencies]
oort_simulator = { path = "../../shared/simulator", features = ["js"], default-features = false }
yew = "0.19.3"
yew-agent = "0.1.0"
serde = "1.0.137"
console_log = "0.2.0"
log = "0.4.17"
console_error_panic_hook = "0.1.7"
