[package]
name = "oort_version_control"
version = "0.79.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
chrono = "0.4.38"
flate2 = "1.0.30"
idb = "0.6.1"
js-sys = "0.3.69"
log = "0.4.21"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
sha2 = "0.10.8"
thiserror = "1.0.52"
wasm-bindgen = "0.2.87"
