[package]
name = "oort_version_control"
version = "0.83.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
chrono = "0.4.31"
flate2 = "1.0.28"
idb = "0.4.1"
js-sys = "0.3.66"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
sha2 = "0.10.8"
thiserror = "1.0.52"
wasm-bindgen = "0.2.87"
