[package]
name = "oort_backend_service"
version = "0.77.0"
publish = false
edition = "2021"

[dependencies]
oort_envelope = { path = "../../shared/envelope" }
oort_code_encryption = { path = "../../shared/code_encryption" }
oort_proto = { path = "../../shared/proto" }
oort_simulator = { path = "../../shared/simulator", features = ["precompile"] }
anyhow = "1.0"
chrono = "0.4.31"
firestore = "0.37.2"
gcloud-sdk = "0.21.0"
log = "0.4.20"
rand = "0.8.5"
regex = "1.10.2"
reqwest = { version = "0.11.22", default-features=false, features = ["json", "rustls-tls"] }
serde_json = "1.0.108"
stackdriver_logger = "0.8.2"
tokio = { version = "1.33", features = ["macros", "rt-multi-thread", "process"] }
axum = { version = "0.6.20", features = ["macros"] }
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
http = "0.2.9"
tracing-subscriber = "0.3.17"
bytes = "1.5.0"
clap = { version = "4.4.7", features = ["derive"] }
comfy-table = "7.1.0"
rayon = "1.8.0"
