[package]
name = "oort_backend_service"
version = "0.79.1"
publish = false
edition = "2021"

[dependencies]
oort_envelope = { path = "../../shared/envelope" }
oort_code_encryption = { path = "../../shared/code_encryption" }
oort_proto = { path = "../../shared/proto" }
oort_simulator = { path = "../../shared/simulator", features = ["precompile"] }
anyhow = "1.0"
chrono = "0.4.35"
firestore = "0.37.5"
gcloud-sdk = "0.23.1"
log = "0.4.21"
rand = "0.8.5"
regex = "1.10.3"
reqwest = { version = "0.11.26", default-features=false, features = ["json", "rustls-tls"] }
serde_json = "1.0.114"
stackdriver_logger = "0.8.2"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread", "process"] }
axum = { version = "0.7.4", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
http = "1.1.0"
tracing-subscriber = "0.3.18"
bytes = "1.5.0"
clap = { version = "4.5.3", features = ["derive"] }
comfy-table = "7.1.0"
rayon = "1.9.0"
