[package]
name = "oort_compiler_service"
version = "0.70.0"
publish = false
edition = "2021"

[dependencies]
oort_code_encryption = { path = "../../shared/code_encryption" }
oort_compiler = { path = "../../shared/compiler" }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
anyhow = "1.0"
bytes = "1.5"
log = "0.4.20"
stackdriver_logger = "0.8.2"
once_cell = "1.18"
regex = "1.10.1"
lazy_static = "1.4.0"
clap = { version = "4.4.6", features = ["derive"] }
tempfile = "3.8.0"
axum = "0.6.20"
tower-http = { version = "0.4.4", features = ["cors", "trace"] }
http = "0.2.9"
tracing-subscriber = "0.3.17"
