[package]
name = "oort_compiler_service"
version = "0.79.3"
publish = false
edition = "2021"

[dependencies]
oort_code_encryption = { path = "../../shared/code_encryption" }
oort_compiler = { path = "../../shared/compiler" }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
anyhow = "1.0"
bytes = "1.6"
log = "0.4.21"
stackdriver_logger = "0.8.2"
once_cell = "1.19"
regex = "1.10.5"
lazy_static = "1.4.0"
clap = { version = "4.5.7", features = ["derive"] }
tempfile = "3.10.1"
axum = "0.7.5"
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
http = "1.1.0"
tracing-subscriber = "0.3.18"
