[package]
name = "oort_leaderboard_service"
version = "0.41.0"
publish = false
edition = "2021"

[dependencies]
oort_proto = { path = "../../shared/proto" }
oort_envelope = { path = "../../shared/envelope" }
oort_code_encryption = { path = "../../shared/code_encryption" }
salvo = "0.36"
salvo_extra = { version="0.36", features=["cors"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1.0"
log = "0.4.17"
stackdriver_logger = "0.8.0"
firestore = "0.6.1"
gcloud-sdk = "0.18.1"
serde_json ="1.0"
chrono = "0.4.22"
reqwest = { version = "0.11.14", default-features=false, features = ["json", "rustls-tls"] }
