[package]
name = "oort_shortcode_service"
version = "0.36.1"
publish = false
edition = "2021"

[dependencies]
oort_proto = { path = "../../shared/proto" }
oort_code_encryption = { path = "../../shared/code_encryption" }
salvo = "0.36"
salvo_extra = { version="0.36", features=["cors"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
anyhow = "1.0"
log = "0.4.17"
stackdriver_logger = "0.8.0"
firestore = "0.6.1"
gcloud-sdk = "0.18.1"
regex = "1.7.1"
rand = "0.8.5"
serde_json = "1.0.93"
chrono = "0.4.23"
