[package]
name = "oort_ai"
version = "0.38.1"
edition = "2021"
authors = ["Rich Lane"]
description = "A space fleet programming game."
license = "GPL-3.0-or-later"
repository = "http://github.com/rlane/oort3"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oort_api = { path = "../api" }
