[package]
name = "oort_ai"
version = "0.81.0"
edition = "2021"
authors = ["Rich Lane"]
description = "A space fleet programming game."
license = "GPL-3.0-or-later"
repository = "https://github.com/rlane/oort3"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
oort_api = { path = "../api" }
