[package]
name = "oort_api"
version = "0.30.1"
edition = "2021"
authors = ["Rich Lane"]
description = "APIs for Oort, a space fleet programming game."
license = "GPL-3.0-or-later"
repository = "http://github.com/rlane/oort3"

[dependencies]
oorandom = "11.1.3"
serde = { version = "1.0", optional = true }
