[package]
name = "oort_api"
version = "0.78.0"
edition = "2021"
authors = ["Rich Lane"]
description = "APIs for Oort, a space fleet programming game."
license = "GPL-3.0-or-later"
repository = "https://github.com/rlane/oort3"

[dependencies]
oorandom = "11.1.3"
serde = { version = "1.0", optional = true }
byteorder = "1.5.0"
maths-rs = "0.2.5"
