[package]
name = "oort_code_encryption"
version = "0.78.2"
publish = false
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = "1.0.75"
base64 = "0.21.5"
bincode = "1.3.3"
flate2 = "1.0.28"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmark"
harness = false
